--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
             <h2>Professional Summary 🖥️</h2>
             <details>
                 <summary>Read More</summary>
-                <p>As a seasoned Full Stack Web Developer, I bring a dynamic blend of creativity and technical expertise honed over five years in the industry. My passion lies in crafting, evolving, and guiding sophisticated web applications and websites from the ground up. With a firm grasp on a wide array of cutting-edge web technologies and frameworks, I specialize in developing scalable, efficient, and intuitively navigable digital solutions.<br><br> My approach is always user-centric, ensuring that each project not only aligns with but also surpasses business goals and user expectations. This commitment is reflected in my robust portfolio, showcasing a series of successful projects that span from initial concept to polished completion, each a testament to my dedication to excellence in the field of web development.</p>
+                <p>As a Web Developer, I bring a dynamic blend of creativity and technical expertise honed over five years in the industry. My passion lies in crafting, evolving, and guiding sophisticated web applications and websites from the ground up. With a firm grasp on a wide array of cutting-edge web technologies and frameworks, I specialize in developing scalable, efficient, and intuitively navigable digital solutions.<br><br> My approach is always user-centric, ensuring that each project not only aligns with but also surpasses business goals and user expectations. This commitment is reflected in my robust portfolio, showcasing a series of successful projects that span from initial concept to polished completion, each a testament to my dedication to excellence in the field of web development.</p>
             </details>
         </section>
 
@@ -170,7 +170,7 @@
                 <summary>Read More</summary>
                 <ol>
                     <li>2017 - Present</li>
-                    <p>Full Stack Web Developer</p>
+                    <p>Web Developer</p>
                     <li>2012 - 2017</li>
                     <p>CEO At East Street Computer Repairs</p>
                     <li>2009 - 2012</li>
@@ -179,7 +179,7 @@
                     <p>Worked as a security officer</p>
                 </ol>
                 <p>
-                    Since 2017, I have thrived in the dynamic realm of freelance Full Stack Web Development, dedicating myself to the creation and meticulous refinement of high-caliber websites and applications. My portfolio, featuring notable projects such as https://www.ecomwwebsites.com, [elitecareplus.co.uk] https://www.elitecareplus.co.uk/, and impeccablehealthcare.co.uk  https://impeccablehealthcare.co.uk/, stands as a testament to my commitment to functional excellence and optimal performance.<br></br>
+                    Since 2017, I have thrived in the dynamic realm of freelance Web Development, dedicating myself to creating and meticulously refining high-calibre websites and applications. My portfolio, featuring notable projects such as https://www.ecomwwebsites.com, [elitecareplus.co.uk] https://www.elitecareplus.co.uk/, and impeccablehealthcare.co.uk  https://impeccablehealthcare.co.uk/, stands as a testament to my commitment to functional excellence and optimal performance.<br></br>
 
                     In my journey, I have fostered close collaborations with clients, delving deep into their needs to devise and execute tailored web solutions that not only meet but also enhance their business objectives. I have consistently applied responsive design principles to ensure seamless functionality across diverse devices, thereby elevating user engagement and experience. <br></br>
                     
@@ -197,7 +197,7 @@
             <details>
                 <summary>Read More</summary>
                 <p><span><b>Languages:</b></span>
-                    HTML5, CSS3, JavaScript, PHP,
+                    HTML5, CSS3, Including Some of these languages JavaScript, PHP,
                     SQL Frameworks & Libraries: React, Angular, Node.js, Laravel
                     <p><span><b>Database Management:</b></span>
                     MySQL, MongoDB
