--- a/about.html
+++ b/about.html
@@ -197,7 +197,7 @@
             <details>
                 <summary>Read More</summary>
                 <p><span><b>Languages:</b></span>
-                    HTML5, CSS3, Including Some of these languages JavaScript, PHP,
+                    HTML5, CSS3, I have some knowledge in these languages JavaScript, PHP,
                     SQL Frameworks & Libraries: React, Angular, Node.js, Laravel
                     <p><span><b>Database Management:</b></span>
                     MySQL, MongoDB
